--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,8 @@ nav ul li a:hover {
     display: flex;
     justify-content: space-around;
     margin: 0;
+    padding-top:100px;
+    padding-bottom:100px;
     align-items: center;
     background-color: rgb(32, 10, 53);
 
